rns-lang/tests/snapshots/lexer-strings-unterminated_string_after_escape.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
"String ending with backslash\
----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/strings/unterminated_string_after_escape.ja:2:1 ]
   │
 2 │ "String ending with backslash\
   │ ┬  
   │ ╰── String started here is not terminated
   │ 
   │ Note: Multiple-line strings are not supported, make sure to close the string before the end of the line.
───╯
